# IronRAG.Confluence

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  routing.yaml.example
.github/workflows/: release.yml
src/confluence_connector/: __init__.py  __main__.py  adapter.py  config.py  confluence.py  mapping.py  webhook.py
tests/: test_adapter.py  test_confluence_client.py  test_mapping.py
